Move chedk of default profiles before delete to service layer